// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleVocabListButton /> should match contracted snapshot 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 2em;
  height: 2em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c1 {
  padding: 0.225rem;
  font-size: 15.3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 8em;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  -webkit-font-smoothing: antialiased;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  outline: 0;
  color: #fafafa;
  border: 2px solid #4c81d6;
  background-color: #4c81d6;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
}

.c1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  border-radius: 0;
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  min-width: auto;
}

.c1::-moz-focus-inner {
  border: 0 !important;
  padding: 0 !important;
}

.c0 {
  padding-left: 0.45rem;
  padding-right: 0.45rem;
  line-height: 1;
  font-size: 1.3em;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0:active {
  opacity: 1;
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

@media (min-width:600px) {
  .c1 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c1 {
    font-size: calc(15.3px + (17.4 - 15.3) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c1 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding-left: 0.6665rem;
  }
}

@media (min-width:600px) {
  .c0 {
    padding-right: 0.6665rem;
  }
}

<button
  aria-label="Enlarge card size"
  class="c0 c1"
  color="#fafafa"
  type="button"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="EXPAND_ALL"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"
      />
    </svg>
  </span>
</button>
`;

exports[`<ToggleVocabListButton /> should match expanded snapshot 1`] = `
.c2 {
  display: block;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  width: 2em;
  height: 2em;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0);
  color: currentColor;
}

.c3 {
  display: block;
  pointer-events: none;
  -webkit-transform-origin: 50% 50% 0px;
  -ms-transform-origin: 50% 50% 0px;
  transform-origin: 50% 50% 0px;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  fill: currentColor;
}

.c1 {
  padding: 0.225rem;
  font-size: 15.3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  min-width: 8em;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  -webkit-font-smoothing: antialiased;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  outline: 0;
  color: #fafafa;
  border: 2px solid #4c81d6;
  background-color: #4c81d6;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955);
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
}

.c1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  border-radius: 0;
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  min-width: auto;
}

.c1::-moz-focus-inner {
  border: 0 !important;
  padding: 0 !important;
}

.c0 {
  padding-left: 0.45rem;
  padding-right: 0.45rem;
  line-height: 1;
  font-size: 1.3em;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),-webkit-transform 100ms linear;
  -webkit-transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  transition: all 250ms cubic-bezier(0.455,0.030,0.515,0.955),transform 100ms linear;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c0:active {
  opacity: 1;
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

@media (min-width:600px) {
  .c1 {
    padding: 0.33325rem;
  }
}

@media (min-width:600px) and (max-width:1800px) {
  .c1 {
    font-size: calc(15.3px + (17.4 - 15.3) * ( (100vw - 600px) / ( 1800 - 600) ));
  }
}

@media (min-width:1800px) {
  .c1 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding-left: 0.6665rem;
  }
}

@media (min-width:600px) {
  .c0 {
    padding-right: 0.6665rem;
  }
}

<button
  aria-label="Shrink card size"
  class="c0 c1"
  color="#fafafa"
  type="button"
>
  <span
    class="c2"
    color="currentColor"
  >
    <svg
      class="c3"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      title="CONTRACT_ALL"
      viewBox="0 0 24 24"
      width="100%"
    >
      <path
        d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"
      />
    </svg>
  </span>
</button>
`;
